Bug fix. The "Sign up" top nav element will no longer be split into 2 lines on narrow aspect ratios

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ header {
 
 a {
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .highlight {
